new files added

--- a/app.json
+++ b/app.json
@@ -23,19 +23,17 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ]
-    ],
-    "experiments": {
-      "typedRoutes": true
-    }
+        [
+          "expo-location",
+          {
+
+            "locationAlwaysAndWhenInUsePermission":"Allow location track to use your location"
+          }
+          
+          
+        ]
+
+      
+    ]
   }
 }
